Fix feature color

--- a/angkorwat.html
+++ b/angkorwat.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-2">
                 <div class="card mb-3">
-                    <div class="card-header border border-5 border-danger bg-danger text-white" style="outline: none;" >
+                    <div class="card-header bg-danger text-white">
                         <h5 class="mb-0 py-1  text-light">រឿងរ៉ាវដែលអ្នកត្រូរដឹងអំពីប្រាសាទអង្គរវត្ត!</h5>
                     </div>
                     <img src="./images/temple/angkorwat-2.jpg" class="card-img-center img-fluid" alt="...">
@@ -76,32 +76,32 @@
                 </div>
             </div>
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2">
-                <h4 class="mb-0 pb-0" >ច្រើនទៀត...</h4>
+                <h4>ច្រើនទៀត...</h4>
                 <hr>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
+                <a href="./bayon.html" class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow ">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/temple/bayon.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/bayon.jpg" alt="" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./bayon.html" class="text-secondary" >ប្រាសាទបាយ័ន</a>
+                        <p class="text-secondary" >ប្រាសាទបាយ័ន</p>
                     </div>
-                </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary  rounded">
+                </a>
+                <a href="./banteaysrey.html" class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/temple/banteay_srey.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/banteay_srey.jpg" alt="" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="./banteaysrey.html" class="text-secondary" >ប្រាសាទបន្ទាយស្រី</a>
+                        <p class="text-secondary" >ប្រាសាទបន្ទាយស្រី</p>
                     </div>
-                </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
+                </a>
+                <a href="./nature.html" class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/nature/quadBike.png" alt="" class="rounded-start" >
+                        <img src="./images/nature/quadBike.png" alt=""  >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./nature.html"class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <p class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="container mustKnow mb-5" id="mustKnow">
@@ -111,7 +111,7 @@
                     <a  href="#" class="close d-flex align-items-center"><i class="fa-solid fa-xmark"></i></a>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
-                    <h5 class="alert alert-secondary">១. ជាបូជនីយដ្ឋានសាសនាធំជាងគេបំផុតលើលោក</h5>
+                    <h5 class="alert alert-secondary" >១. ជាបូជនីយដ្ឋានសាសនាធំជាងគេបំផុតលើលោក</h5>
                     <img src="./images/mustknow/angkorwat-1.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>យោងតាមកំណត់ត្រាហ្គីនណេសពិភពលោក (Guinness World Record) ប្រាសាទអង្គរវត្ដត្រូវបានចាត់ទុកជាទីបូជនីយដ្ឋានខាងសាសនាធំជាងគេបំផុតក្នុងពិភពលោកបើប្រៀបធៀបនឹងប្រាសាទបុរាណជាច្រើនទៀតនៃប្រទេសផ្សេងៗ។ វាលាតសន្ធឹងលើផ្ទៃដី២៤,៨ គ.ម. ជាមួយនឹងផ្ទៃក្រឡា ១.៦២៦.០០០ ម៉ែត្រការេ។ ប្រាសាទអង្គរវត្តត្រូវបានរកឃើញឡើងវិញ​ដោយ ធម្មជាតិវិទូបារាំងលោក ហង់ហ្រ៊ី មូហ៊ូត (Henri Mouhot) នៅឆ្នាំ១៨៦០។</p>
                 </div>
