--- a/bayon.html
+++ b/bayon.html
@@ -78,30 +78,30 @@
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2">
                 <h4>ច្រើនទៀត...</h4>
                 <hr>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
+                <a href="./angkorwat.html" class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/temple/angkor-wat-untold.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/angkor-wat-untold.jpg" alt="">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./angkorwat.html" class="text-secondary" >ប្រាសាទអង្គរវត្ត</a>
+                        <p  class="text-secondary" >ប្រាសាទអង្គរវត្ត</p>
                     </div>
-                </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
+                </a>
+                <a href="./banteaysrey.html"   class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/temple/banteay_srey.jpg" alt="" class="rounded-start">
+                        <img src="./images/temple/banteay_srey.jpg" alt="">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="./banteaysrey.html" class="text-secondary" >ប្រាសាទបន្ទាយស្រី</a>
+                        <p class="text-secondary" >ប្រាសាទបន្ទាយស្រី</p>
                     </div>
-                </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
+                </a>
+                <a  href="./nature.html"  class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded text-decoration-none shadow" >
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
-                        <img src="./images/nature/quadBike.png" alt="" class="rounded-start" >
+                        <img src="./images/nature/airballoon-3.jpg" alt="" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./nature.html" class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <p class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="container mustKnow mb-5 " id="mustKnow"  >
@@ -143,10 +143,9 @@
                     <span class="btn btn-outline-primary read-more-btn w-25 p-0 m-0 mb-2" >អានបន្ត...</span>
                 </div>
             </div>
-    </div>
-      
+        </div>
         <hr>
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
                 <h5 class="alert alert-danger">ទស្សនាវីដេអូខ្លី</h5>
                 <iframe width="100%" height="275" src="https://www.youtube.com/embed/uzr5dUJ1SjU?si=gn3vdml7NeeNBxn_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
