--- a/prehkhan.html
+++ b/prehkhan.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="./css/angkorwat.css">
         <link rel="stylesheet" href="./css/footer.css">
         
-        <title>ប្រាសាទ​អង្គរវត្ត</title>
+        <title>ប្រាសាទ​ព្រះខ័ន្ធ</title>
     </head>
 <body>
     <div id="progress">
@@ -46,22 +46,20 @@
     </nav>
     <div class="container">
         <div class="d-flex justify-content-between" >
-            <h2>ប្រាសាទ​អង្គរវត្ត</h2>
+            <h2>ប្រាសាទ​ព្រះខ័ន្ធ</h2>
             <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
         </div>
         <div class="row">
             <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 mb-3 content">
-                <img src="./images/temple/angkorwat.jpg" alt="" class="img-fluid rounded mb-3">
-                <p>អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួមខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដឺ ហ្គោល។​ ប្រាសាទដែលមាន​ប្រជាប្រិយជាងគេ​ក្នុងប្រទេសកម្ពុជានេះ ត្រូវបានគេស្គាល់​ថា​ជាប្រាសាទព្រហ្មញ្ញសាសនាដ៏​ធំបំផុត បានកសាងដើម្បី​ឧទ្ទិសដល់ព្រះវិស្ណុ ក្រោមស្នាដៃ​​ ព្រះបាទសូរ្យវរ្ម័នទី២ នៅដើម​សតវត្សទី១២ ដែលស្ថិតនៅក្នុងរាជធានី​យសោធរបុរៈ​(សម័យបច្ចុប្បន្នអង្គរ)។ ...
+                <img src="./images/temple/preah_khan.jpg" alt="" class="img-fluid rounded mb-3">
+                <p>ច្រកចូលសំខាន់របស់ប្រាសាទនេះស្ថិតនៅទិសខាងកើត ប៉ុន្តែភ្ញៀវទេសចរអាចចេញចូលពីទិសខាងលិច ឬទិសខាងជើងក៏បានដែរ។ នាខែវិច្ឆិកា ឆ្នាំ១៩៣៩ លោក មូរីស៍គ្លេសជាមន្ត្រីអភិរក្សអង្គរបានរកឃើញសិលាស្ដម្ភចារិកមួយផ្ទាំងកប់ដីនៅក្នុងបរិវេណនៃប្រាសាទនេះ។ ផ្ទាំងសិលាចារិកនោះមានកម្ពស់ ១,៨៥ម៉ែត្រ សរសេរជាភាសាសំស្រ្កឹតមានចំនួន ១៧៨ ស្លោកគាថា ដែលបរិយាយអំពី ការបួងសួង ការលើកសរសើរព្រះរាជា ការតម្កល់ព្រះបដិមា ការចូលរួមថែទាំនិងផ្តល់តង្វាយពីព្រាហ្មផ្សេងៗ ពីស្តេចជ្វា ស្តេចចាម ស្តេចយួន និងពីអ្នកភូមិនៅជុំវិញប្រាសាទ ពិធីអភិសេកព្រះ និងផ្តល់ព័ត៌មានអំពីបារាយណ៍ជយតដាកដែលមានប្រាសាទនាគព័ន្ធស្ថិតនៅចំកណ្តាល។ សិលាចារិកនេះនិពន្ធដោយព្រះអម្ចាស់ វិរកុមារ ជាព្រះបុត្រាព្រះបាទជ័យវរ្ម័នទី៧[១]។
                 <span class="read-more">
-                    ប្រាសាទអង្គរវត្តបានក្លាយជានិមិត្តរូប និងជារូបភាពតំណាងប្រទេសកម្ពុជា ហើយក៏ជាប្រាសាទមួយ​រួមចំណែកក្នុងការទាក់ទាញភ្ញៀវទេសចរជាតិ និងអន្តរជាតិដែរ។​​ ​ប្រាសាទមួយនេះ ត្រូវបានរចនាឡើង ដើម្បីតំណាងភ្នំព្រះសុមេរុ ដែលជាទីលំនៅរបស់អទិទេព និងទេវតាក្នុងទេវកថាហិណ្ឌូ ដែលមានកសិណ ឬគូទឹកព័ទ្ធជុំវិញប្រហែលជា 16គីឡូម៉ែត្រ។ ចំណែកកសិណពិតប្រាកដរបស់ប្រាសាទ មានបណ្ដោយប្រវែង 1500មែត្រ x ទទឹង​1300ម៉ែត្រ លើ២០០ម៉ែត្រ ផ្លូវធំដើរចូលពីទិសខាងលិចទៅដល់ប្រាសាទកណ្តាលមានប្រវែង ២៥០ម៉ែត្រ ឯកំពូលកណ្ដាលខ្ពស់ធំជាងគេបំផុតរបស់នគរវត្ដ មានកម្ពស់ ៦៥ម និងជញ្ជាំងខាងក្រៅ៣,៦ សហាតិមាត្រ (២,២ ម៉ៃ.)វែងគឺជាថែវមានបីជ្រុង ដែលថែវនីមួយៗឡើងខ្ពស់ទៅថែវដែលជាប់គ្នា ។​ នៅចំកណ្ដាលនៃប្រាសាទបញ្ឈរនូវជួរចតុរង្គនៃប៉ម។ មិនដូចប្រាសាទនៅតំបន់អង្គរភាគច្រើនទេ អង្គរវត្តបែរមុខទៅទិសខាងលិច តាមការស្រាវជ្រាវរបស់អ្នកសិក្សាបានវែកញែកថាជាចំណុចសំខាន់នៃប្រាសាទនេះ។ ប្រាសាទនេះត្រូវបានគេកោតសរសើរដោយសារភាពសម្បើមនិងរុងរឿងនៃស្ថាបត្យកម្មនេះ ចម្លាក់ដែលលាតសន្ធឹង និងដោយសារពពួកទេវតាដែលតាក់តែងលើជញ្ជាំងប្រាសាទ។
-
-                        ក្នុងឆ្នាំ២០១៩ នារដូវប្រាំង នៅចន្លោះថ្ងៃទី ២០ ទៅ ២២ ខែមិនា និង សមរាត្រីរដូវវស្សា ចន្លោះថ្ងៃទី២១ ទៅ ២៣ ខែកញ្ញា នេះ មាន​បាតុភូតព្រះអាទិត្យរះចំកណ្ដាលកំពូលប្រាសាទអង្គរវត្តនេះ ស្ដែងអោយឃើញពីភាពអច្ឆរិយ​នៃប្រាសាទអង្គរវត្ត ដែលបុព្វបុរសខ្មែរកសាងឡើង ដោយបានគិតគូរអំពីសំណង់ស្ថាបត្យកម្ម និងបានផ្សាភ្ជាប់ជាមួយធម្មជាតិយ៉ាងច្បាស់លាស់ ដ៏គួរអោយស្ងប់ស្ញែងទៀតផង​។
+                    ប្រាសាទព្រះខ័ន មានរាងបួនជ្រុងទ្រវែង មានវិមាត្រប្រវែង ៨០០ ម៉ែត្រ x ៧០០ ម៉ែត្រ សង់ឡើងនៅរជ្ជកាលព្រះបាទជ័យវរ្ម័នទី៧ តែពុំបានសង់រួចនៅក្នុងសម័យព្រះអង្គទេ មហាក្សត្រក្រោយៗ បានសង់បន្ថែមបន្ដបន្ទាប់នៅគ្រិស្តសតវត្សទី ១២ - ១៣។ ក្បាច់រចនានៃប្រាសាទ មានលក្ខណៈដូចជាប្រាសាទបន្ទាយក្តី និង ប្រាសាទតាព្រហ្មដែរ។ ប្រាសាទព្រះខ័ន ស្ថិតនៅតាមផ្លូវវង់ធំ ដោយចេញតាមផ្លូវទ្វារដីឆ្នាំងនៃរាជធានីអង្គរធំ។ ប្រាសាទនេះកសាងឡើងនៅសតវត្យរ៍ទី១២ ក្នុងឆ្នាំ១១៩១ ដោយព្រះបាទជ័យវរ្ម័នទី៧ ដើម្បីឧទ្ទិសដល់ព្រះវររាជបិតារបស់ព្រះអង្គ។ ប្រាសាទនេះ មានទំហំ ៥៦ ហិចតា។ តាមសិលាចារឹកថា ប្រាសាទនេះសាងសង់នៅសមរភូមិចុងក្រោយ ដែលព្រះបាទជ័យវរ្ម័នទី៧ បានផ្តួលរំលំពួកចាម។ ប្រាសាទនេះមានកំពែងបួនជាន់។ នៅកំពែងខាងក្រៅ ដែលបច្ចុប្បន្នរុំព័ទ្ធទៅដោយព្រៃ គឺជាកន្លែងដែលព្រះសង្ឃ និងសិស្សស្នាក់នៅក្នុងប្រាសាទនេះ។ នៅកំពែងជាន់ទីពីរ គឺជាកន្លែងគោរពសាសនា។ ប្រាសាទកណ្តាលជាកន្លែងព្រះពុទ្ធសាសនា ឯភាគខាងជើង និងខាងលិច គឺសម្រាប់ឧទ្ទិសដល់ព្រហ្មមញ្ញសាសនា គឺព្រះនារាយណ៍ (ព្រះវិស្ណុ) (ខាងលិច) និងព្រះឥសូរ (ព្រះសិវៈ) (ខាងជើង)។ នៅផ្នែកខាងត្បូង ជាកន្លែងសម្រាប់គោរពបុព្វជន។ ប្រាសាទព្រះខ័នត្រូវបានកសាងនៅលើតំបន់ដែលព្រះបាទជ័យវរ្ម័នទី៧ បានទទួលជ័យជំនះលើការឈ្លានពានរបស់ពួកចាម ក្នុង១១៩១នៃគ្រឹស្តសករាជ។ ឈ្មោះនៃប្រាសាទមានន័យថា ព្រះខ័នជ័យ (ដាវជ័យ) ដែលយកឈ្មោះពីបុរាណ ជ័យស្រី (ទីក្រុងជ័យជំនះដ៏ពិសិដ្ឋ)។ ទីតាំងដែលមានប្រាសាទសំខាន់បីគឺប្រាសាទព្រះខ័ន ប្រាសាទតាសោម និងប្រាសាទនាគព័ន្ធត្រូវបានគេដាក់ឈ្មោះថា នគរជយស្រី មានន័យថាទីក្រុងនៃព្រះខ័នជ័យ។ ប្រាសាទព្រះខ័នត្រូវបានកសាងនៅចំកណ្តាលអតីតនគរជយស្រីសម្រាប់ឧទ្ទិសថ្វាយជូនដល់ព្រះបិតារបស់ព្រះបាទជ័យវរ្ម័នទី៧ ព្រះនាមធរណិន្រ្ទវម្ម៌ ក្នុងទម្រង់ជាបដិមាព្រះពោធិសត្វអវលោកេស្វរៈ ដែលមាននាមថា ជយវម្ម៌ស្វេរ នៅឆ្នាំ១១៩១។ លើសពីនេះទៅទៀតនៅអឡុងពេលនៃការជួសជុលរាជធានីយសោធរបុរៈ ឬហៅថាក្រុងអង្គរធំដែលធ្លាប់ត្រូវបានដុតបំផ្លាញ់ដោយកងទ័ពចាម ហើយវាមានតួនាទីជាកន្លែងសម្រាប់ព្រះមហាក្សត្រធ្វើការផង ជាសកលវិទ្យាល័យផង និងសម្រាប់គោរពប្រតិបត្តិសាសនាចម្រុះទាំងព្រះពុទ្ធសាសនា និងព្រហ្មញសាសនាផង។ ប្រាសាទព្រះខ័នក៏ធ្លាប់ជាសមរភូមិប្រយុទ្ធប្រឡាក់ទៅដោយថ្លុកឈាមនៅពេលកងទ័ពចាមវាយលុបនិងគ្រប់គ្រងក្រុងអង្គរនៅឆ្នាំ១១៧៧ ប៉ុន្តែត្រូវបានព្រះបាទជយវម្ម៌ទី៧ ធ្វើសង្គ្រាមដណ្តើមយកជ័យបានមកវិញនៅឆ្នាំ១១៨១។
                 </span>    
                 </p>
                 <span class="btn btn-outline-primary read-more-btn w-25 p-0 m-0" >អានបន្ត...</span>
             </div>
-            <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-2">
+            <!-- <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-2">
                 <div class="card mb-3">
                     <div class="card-header bg-danger text-white">
                         <h5 class="mb-0 py-1  text-light">រឿងរ៉ាវដែលអ្នកត្រូរដឹងអំពីប្រាសាទអង្គរវត្ត!</h5>
@@ -79,7 +77,7 @@
                       </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2">
                 <h4>ច្រើនទៀត...</h4>
                 <hr>
